--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,8 @@
 page-home {
-
+    .bg-image{
+        background-image: url('../assets/icon/background.png');
+        background-repeat: repeat;
+        background-position: center;
+        background-size: contain;
+    }
 }
