--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,8 +1,9 @@
 page-home {
     .bg-image{
         background-image: url('../assets/icon/background.png');
-        background-repeat: repeat;
+        background-repeat: no-repeat;
         background-position: center;
         background-size: contain;
+        opacity: 0.7;
     }
 }
