--- a/src/pages/modal/modal.scss
+++ b/src/pages/modal/modal.scss
@@ -1,3 +1,13 @@
 page-modal {
 
+    .bg-image{
+        background-image: url('../assets/icon/background.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+        opacity: 0.7;
+
+        
+    }
+
 }
