--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
   <ion-content>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
+        {{p.title}} <img width="10%" height="10%" src="{{p.icon}}">
       </button>
       <!--button menuClose ion-item  (click)="menuLanterna()">
         Lanterna
