--- a/src/pages/mais/mais.scss
+++ b/src/pages/mais/mais.scss
@@ -9,21 +9,23 @@ page-mais {
       
         .card-title {
           position: absolute;
-          top: 36%;
+          top: 12%;
           font-size: 2.0em;
           width: 100%;
           font-weight: bold;
-          color: #00FF41;
+          //color: #00FF41;
           //color: #fff;
+          color: #000;
         }
       
-        .card-subtitle {
-          font-size: 1.0em;
+        /*.card-subtitle {
+          font-size: 2.0em;
           position: absolute;
-          top: 52%;
+          top: 40%;
           width: 100%;
           color: #fff;
-        }
+          //color: #000;
+        }*/
       
       }
 
