--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,8 +7,8 @@
 
   <ion-content>
     <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}} <img width="15%" height="15%" src="{{p.icon}}">
+      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)" >
+        <img width="15%" height="15%" src="{{p.icon}}"> <strong>{{p.title}}</strong> 
       </button>
     </ion-list>
   </ion-content>
